--- a/SeleniumBasic/test-output/emailable-report.html
+++ b/SeleniumBasic/test-output/emailable-report.html
@@ -25,17 +25,18 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">Login Test</a></td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">F:/JAVA/ALL CODES/Code/IntelliJ/SeleniumBasic/src/test/java/com/TestNG</a></td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">55.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr id="t1"><th colspan="5">Login Test &#8212; passed</th></tr>
-<tr class="passedodd"><td>com.TestNG.LoginTest</td><td><a href="#m1"><b>Test1</b>  ("This is for valid scenario")</a></td><td class="numi">1</td><td>1644644456367</td><td class="numi">0</td></tr>
-<tr class="passedeven"><td>com.TestNG.LoginTest2</td><td><a href="#m2"><b>Test2</b>  ("This is for invalid scenario")</a></td><td class="numi">1</td><td>1644644456409</td><td class="numi">0</td></tr>
+<tr id="t1"><th colspan="5">F:/JAVA/ALL CODES/Code/IntelliJ/SeleniumBasic/src/test/java/com/TestNG &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="3">com.TestNG.LoginTest</td><td><a href="#m1"><b>Login</b>  ("This is for valid scenario")</a></td><td class="numi">1</td><td>1646587013098</td><td class="numi">15419</td></tr><tr class="passedodd"><td><a href="#m2"><b>Logout</b>  </a></td><td class="numi">1</td><td>1646587028545</td><td class="numi">4890</td></tr><tr class="passedodd"><td><a href="#m3"><b>Test4</b>  </a></td><td class="numi">1</td><td>1646587033459</td><td class="numi">0</td></tr>
 </table>
-<h1>Login Test</h1>
-<h2 id="m1">com.TestNG.LoginTest:Test1</h2>
+<h1>F:/JAVA/ALL CODES/Code/IntelliJ/SeleniumBasic/src/test/java/com/TestNG</h1>
+<h2 id="m1">com.TestNG.LoginTest:Login</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.TestNG.LoginTest2:Test2</h2>
+<h2 id="m2">com.TestNG.LoginTest:Logout</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m3">com.TestNG.LoginTest:Test4</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
